# seismograph

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCTRINE.md  Dockerfile  EVAL.md  FAILURES.md  LICENSE  LOOP_STATE.md  Makefile  PRD.md  README.md  RISKS.md  ROADMAP.md  SECURITY.md  alembic.ini  contracts.md  docker-compose.yml  eval_report.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_real_schema.py
app/: cli.py  config.py  db.py  fixtures.py  main.py  routes.py  schemas.py
app/engine/: __init__.py  canonicalize.py  charts.py  contracts.py  embedding.py  golden.py  metamorphic.py  sampler.py  suts.py
data/synthetic/: anchor_set.jsonl  contract.yaml  demo.json
docs/adr/: 0001-record-architecture-decisions.md  0002-llm-senses-deterministic-decides.md
scripts/: check_migrations.py  eval.py  gate.py  smoke_test.py
tests/: test_api.py  test_contracts.py  test_engine.py  test_metamorphic.py  test_smoke.py
