[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seismograph"
version = "0.1.0"
description = "An AI eval system for measuring LLM performance consistency (statistical process control)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nuwan Samaranayake" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "alembic",
    "redis",
    "httpx",
    "aignite-groundwork",
    "numpy",
    "scipy",
    "scikit-learn",
    "pyyaml",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = ["app"]

# For uv users: resolve groundwork from the sibling repo during development.
# With pip, install it first:  pip install -e ../groundwork
[tool.uv.sources]
aignite-groundwork = { path = "../groundwork", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
